infra/k8s/ingress/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bs-blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-reges: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bs-blog.sample
      http:
        paths:
          - path: /api/v1/blog
            pathType: Prefix
            backend:
              service:
                name: blog-sv-srv
                port:
                  number: 5000
          - path: /hub
            pathType: Prefix
            backend:
              service:
                name: hub-sv-srv
                port:
                  number: 5000
